# VPCR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
shaders/: CMakeLists.txt
shaders/glsl/: GLSLCommon.h  clear.comp  clearOPDAA.comp  clearTPAA.comp  clearTPDAA.comp  color.comp  common.glsl  depth.comp  fullScreenTriangle.vert  lod.comp  projection.comp  projectionColorTPAA.comp  projectionDepthTPAA.comp  projectionDepthTPDAA.comp  projectionHistogramTPDAA.comp  projectionOPDAA.comp  projectionPartitionedSupp.comp  renderTarget.frag  renderTargetOPDAA.frag  renderTargetTPAA.frag  renderTargetTPDAA.frag  utility_common.glsl  vertex_precision_common.glsl
src/: BasicPipeline.cpp  BasicPipeline.h  CMakeLists.txt  Config.h  DefaultConfig.cpp  DefaultConfig.h  Gui.cpp  Gui.h  IPipeline.h  OPDAAPipeline.cpp  OPDAAPipeline.h  ParseArgs.cpp  ParseArgs.h  PipelineFactory.cpp  PipelineFactory.h  TGACamera.cpp  TGACamera.h  TGAGpuPass.cpp  TGAGpuPass.h  TGAPointCloudAcceleration.cpp  TGAPointCloudAcceleration.h  TPAAPipeline.cpp  TPAAPipeline.h  TPDAAPipeline.cpp  TPDAAPipeline.h  Utils.cpp  Utils.h  VPCR.cpp  VPCR.h  main.cpp
